@@ -666,7 +666,7 @@ public class MathJax
 		// There's no logical reason for this size but by trial and error, we found
 		// that it matched the size of some PNGs.
 		transcoder.addTranscodingHint(EPSTranscoder.KEY_PIXEL_UNIT_TO_MILLIMETER,
-			new Float(0.247f));
+			Float.valueOf(0.247f));
 		try
 		{
 			transcoder.transcode(new TranscoderInput(new StringReader(svg)),
